code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_108.wast
(assert_invalid
  (module (func $tee-local-unreachable-value
    (local i32)
    (local.tee 0 (unreachable))
  ))
  "type mismatch"
)